# pyshield-smr

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  GEMINI.md  GETTING_STARTED.md  GETTING_STARTED.md.bak  LICENSE  README.md  RUNBOOK.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
data/buildup_factors/: taylor_two_term.json  taylor_two_term.meta.json
data/cross_sections/: photon_mass_attenuation.json  photon_mass_attenuation.meta.json
data/decay_chains/: short.json  short.meta.json
data/flux_to_dose/: icrp74_photon.json  icrp74_photon.meta.json
docs/guides/: HPC.md  MCNP_INTEROP.md  QA.md
docs/theory/: 01_transport_theory.md  02_point_kernel.md  03_monte_carlo.md  04_source_terms.md  05_activation_and_decay.md  06_uq.md  07_alarp.md  PHYSICS_CHANGELOG.md
examples/01_point_kernel_shielding/: config.yaml
examples/02_monte_carlo_transmission/: config.yaml
examples/03_activation_decay/: config.yaml
examples/04_alarp_optimization/: config.yaml
examples/05_smr_compartment/: config.yaml
pyshield_smr/: __init__.py
pyshield_smr/activation/: __init__.py  bateman.py  burnup.py
pyshield_smr/alarp/: __init__.py  optimiser.py  zoning.py
pyshield_smr/cli/: __init__.py  main.py
pyshield_smr/hpc/: __init__.py  parallel.py  scheduler.py
pyshield_smr/io/: __init__.py  report.py  yaml_config.py
pyshield_smr/physics/: __init__.py  attenuation.py  buildup.py  constants.py  dose.py  materials.py  units.py
pyshield_smr/shielding/: __init__.py  detector.py  dose_rate.py  dpa.py  gamma_heating.py  point_kernel.py
pyshield_smr/sources/: __init__.py  source_term.py  spectra.py
pyshield_smr/transport/: __init__.py  geometry.py  mcnp_io.py  monte_carlo.py  tally.py  variance_reduction.py
pyshield_smr/uq/: __init__.py  monte_carlo_uq.py  sensitivity.py
pyshield_smr/utils/: __init__.py  hashing.py  logging.py
pyshield_smr/workflow/: __init__.py  quality.py  runner.py  schema.py
reports/2026-04-15_13-29-04_Co-60_Behind_5cm_Lead/: spec_used.yaml
reports/2026-04-15_13-29-10_ALARP_Optimal_Lead_Thickness_for_Cs-137_Vault/: spec_used.yaml
reports/2026-04-15_13-29-10_Co-60_Buildup_and_Decay_in_Steel_Target/: spec_used.yaml
reports/2026-04-15_13-29-10_Prototype_SMR_Compartment_Dose_Rate_Analysis/: spec_used.yaml
reports/2026-04-15_13-31-19_Prototype_SMR_Compartment_Dose_Rate_Analysis/: spec_used.yaml
reports/2026-04-15_13-35-34_ALARP_Optimal_Lead_Thickness_for_Cs-137_Vault/: spec_used.yaml
reports/2026-04-15_17-23-26_Co-60_Buildup_and_Decay_in_Steel_Target/: spec_used.yaml
reports/2026-04-15_17-23-26_smoke/: spec_used.yaml
reports/2026-04-15_17-24-21_final/: spec_used.yaml
reports/templates/: report.html.j2  (+1 more)
tasks/: PROCESS_ARCHITECTURE.md  audit_process.py  lessons.md  logbook.md  playbook.md  process_state.md  todo.md
tests/: __init__.py
(+38 files in other folders)
